Refactor, reformat